--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "devDependencies": {
-    "axios": "^0.27.2",
-    "ethers": "^5.6.6",
-    "typescript": "^4.6.4"
-  }
+    "devDependencies": {
+        "axios": "^0.27.2",
+        "ethers": "^5.6.6",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.4"
+    }
 }
