--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+    "version": "0.0.1",
+    "name": "@hcheng826/mev-infra",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/@hcheng826"
+    },
     "devDependencies": {
+        "prettier": "^2.6.2"
+    },
+    "dependencies": {
         "axios": "^0.27.2",
         "ethers": "^5.6.6",
-        "prettier": "^2.6.2",
         "typescript": "^4.6.4"
     }
 }
