--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
           scope: '@hcheng826'
       - run: npm install
       - run: make build
-      - run: npm publish dist
+      - run: npm publish ./dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.MY_GITHUB_TOKEN}}
