--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-    "version": "0.0.1",
+    "version": "0.1.0",
     "name": "@hcheng826/mev-infra",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/@hcheng826"
     },
     "devDependencies": {
-        "prettier": "^2.6.2"
+        "@nomiclabs/hardhat-ethers": "^2.0.6",
+        "@types/chai": "^4.3.1",
+        "@types/mocha": "^9.1.1",
+        "ethers": "^5.6.6",
+        "mocha": "^10.0.0",
+        "prettier": "^2.6.2",
+        "ts-node": "^10.7.0"
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "ethers": "^5.6.6",
         "typescript": "^4.6.4"
+    },
+    "scripts": {
+        "test": "npx mocha --require ts-node/register test/*.test.ts"
     }
 }
